--- a/src/components/blog-grid.module.css
+++ b/src/components/blog-grid.module.css
@@ -14,10 +14,28 @@
 }
 
 .blog-grid {
-    width: 900px;
-    display: flex;
-    justify-content: flex-center;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  .blog-grid {
+  }
+
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+  .blog-grid {
+  }
+
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+  .blog-grid {
+  }
 }
 
   
