--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -47,3 +47,27 @@ header {
   font-size: 2.5em;
   font-weight: 900;
 }
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  .page h1 {
+    font-size: .75em;
+   }
+  .page h2 {
+    font-size: 1em;
+  }
+  .page h4 {
+    font-size: .75em;
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+
+
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+
+}
