--- a/src/components/blog-grid-item.module.css
+++ b/src/components/blog-grid-item.module.css
@@ -1,20 +1,19 @@
 .blog-grid-item {
-    flex: 1 0 calc(33% - 10px);
-    margin: 10px 0 0 2%;
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
-    border: 0px solid #fff;
     text-align: left;
-    width: calc(100% * (1/4) - 10px 0px);
+    width: 380px;
     height: 537px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .blog-grid-text {
+  .article-title {
     margin-top: 20px;
   }
 
-  .excerpt {
+  .article-excerpt {
     margin-bottom: 1em;
   }
 
