--- a/src/components/blog-grid.module.css
+++ b/src/components/blog-grid.module.css
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
-  padding: 5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   display: flex;
   justify-content: center;
   flex-direction: column;
