--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -26,7 +26,7 @@ header {
   padding-top: 1em;
   padding-bottom: 1em;
 
-  margin-top: 2em;
+  margin-top: 60px;
   background-color: #000;
   text-align: center;
   color: #EFEFEF;
