--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -1,13 +1,13 @@
 .navbar {
   width: 100%;
-  padding: 1em 1em 1em 1em;
+  padding-top: .5em;
   display: flex;
   justify-content: center;
   align-items: center;
 
   position: fixed;
   top: 0;
-  height: 2em;
+  height: 60px;
   background-color: #000;
   text-align: center;
   overflow: hidden;
