Add email subscribe component

--- a/src/components/blog-grid-item.module.css
+++ b/src/components/blog-grid-item.module.css
@@ -22,7 +22,7 @@
   }
 
   .read-more {
-    color: #5379a0;
+    color: #C8A537;
     font-weight: 700;
     font-style: italic;
     text-decoration: underline;
