--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -4,9 +4,22 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
+body {
+  min-height: 100vh;
+}
+
 .page {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  min-height: 100vh;
+  height: 100%;
+  width: 100%;
+  background-color: #000;
   font-family: 'Raleway', sans-serif;
   font-size: 23px;
 }
@@ -21,12 +34,9 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-
   flex-direction: column;
   padding-top: 1em;
   padding-bottom: 1em;
-
-  margin-top: 60px;
   background-color: #000;
   text-align: center;
   color: #EFEFEF;
