--- a/src/components/subscribe.module.css
+++ b/src/components/subscribe.module.css
@@ -1,18 +1,23 @@
 
 .subscribe {
-  width: 100%;
+  width: 50%;
   padding: 1em 1em 1em 1em;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-
   flex-direction: column;
   padding-top: 1em;
   padding-bottom: 1em;
-
+  font-size: ;
   background-color: #000;
   text-align: center;
   color: #EFEFEF;
+}
+
+b, strong {
+  font-weight: bolder;
 }
 
 input {
