--- a/src/components/article.module.css
+++ b/src/components/article.module.css
@@ -18,36 +18,24 @@
 
 .article-container h1 {
   font-family: 'Georama', sans-serif;
-  font-size: 2.5em;
+  font-size: 2rem;
   font-weight: 900;
   letter-spacing: 0;
  }
 
 .article-container h2, h3, h4 {
-  font-family: 'Georama', sans-serif;
-  font-size: 1em;
+  font-size: 1rem;
+  font-weight: 300;
   padding-bottom: .5em;
 }
 
 .article-container ol {
-  padding-left: 50px;
-  padding-bottom: 25px;
+  padding-left: .5em;
+  padding-bottom: 1em;
 }
 
 .article-container ul {
-  padding-left: 50px;
-  padding-bottom: 25px;
+  padding-left: .5em;
+  padding-bottom: 1em;
 }
 
-/* Mobile Styles */
-@media only screen and (max-width: 400px) {
-  .article-container h1 {
-    font-size: 2em;
-   }
-   .article-container h2 {
-    font-size: .75em;
-  }
-  .article-container h4 {
-    font-size: .75em;
-  }
-}
