--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  font-size: 16px; /* min */
+  font-size: 14px; /* min */
 }
 
 html, body {
@@ -49,7 +49,7 @@ h1 {
   font-family: 'Raleway', sans-serif;
   font-size: 1rem;
   font-weight: 300;
-  letter-spacing: .25em;
+  letter-spacing: .25rem;
  }
 
 h2, h3, h4 {
@@ -66,19 +66,20 @@ h3 {
 }
 
 h4 {
-  font-size: 1.25;
+  font-size: 1.25rem;
 }
 
 p {
-  line-height: 1.5em;
-  margin-bottom: 1em;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin-bottom: 1rem;
 }
 
-/* font-size: 16px; min */
+/* font-size: 14px; min */
 /* font-size: 24px; max */
 @media (min-width: 400px) and (max-width: 800px){
   :root { 
-    font-size: calc( 16px + (24 - 16) * ( (100vw - 400px) / ( 800 - 400) ));
+    font-size: calc( 14px + (24 - 14) * ( (100vw - 400px) / ( 800 - 400) ));
   }
 }
 
