--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -1,6 +1,5 @@
 .navbar {
   width: 100%;
-  padding-top: .5em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,7 +7,7 @@
   position: fixed;
   top: 0;
   height: 60px;
-  background-color: #000;
+  background-color: #5379a0;
   text-align: center;
   overflow: hidden;
   z-index: 1;
