--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  font-size: 14px; /* min */
+  font-size: 16px; /* min */
 }
 
 html, body {
@@ -79,11 +79,15 @@ a {
   font-size: 1rem;
 }
 
-/* font-size: 14px; min */
+li {
+  font-size: 1rem;
+}
+
+/* font-size: 16px; min */
 /* font-size: 20px; max */
 @media (min-width: 400px) and (max-width: 800px){
   :root { 
-    font-size: calc( 14px + (20 - 14) * ( (100vw - 400px) / ( 800 - 400) ));
+    font-size: calc( 16px + (20 - 16) * ( (100vw - 400px) / ( 800 - 400) ));
   }
 }
 
