--- a/src/components/article.module.css
+++ b/src/components/article.module.css
@@ -1,13 +1,6 @@
-.section {
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-
-
 .article-container {
-  margin-top: 60px;
-  width: 60%;
-  padding: 25px;
+  width: 70%;
+  padding: 2rem;
   display: flex;
   margin-right: auto;
   margin-left: auto;
