--- a/src/components/subscribe.module.css
+++ b/src/components/subscribe.module.css
@@ -20,6 +20,9 @@ b, strong {
 }
 
 input {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
   padding: .5em;
   background-color: #000;
   color: #EFEFEF;
