--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -23,7 +23,8 @@ body {
   min-height: 100vh;
   height: 100%;
   width: 100%;
-  background-color: #000;
+  background-color: #EFEFEF;
+  color: #000;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -40,9 +41,9 @@ header {
   flex-direction: column;
   padding-top: 1em;
   padding-bottom: 1em;
-  background-color: #000;
+  background-color: #EFEFEF;
   text-align: center;
-  color: #EFEFEF;
+  color: #000;
 }
 
 h1 {
