--- a/src/components/subscribe.module.css
+++ b/src/components/subscribe.module.css
@@ -10,9 +10,7 @@
   flex-direction: column;
   padding-top: 1em;
   padding-bottom: 1em;
-  background-color: #000;
   text-align: center;
-  color: #EFEFEF;
 }
 
 b, strong {
@@ -23,9 +21,8 @@ input {
   font-family: 'Raleway', sans-serif;
   font-size: 1rem;
   font-weight: 300;
+  background-color: #EFEFEF;
   padding: .5em;
-  background-color: #000;
-  color: #EFEFEF;
   border: none;
   border-bottom: 2px solid;
 }
