--- a/src/components/article.module.css
+++ b/src/components/article.module.css
@@ -1,12 +1,12 @@
 .article-container {
-  width: 70%;
+  width: 50%;
   padding: 2rem;
   display: flex;
   margin-right: auto;
   margin-left: auto;
   position: relative;
 
-  background-color: #FFF;
+  background-color: #EFEFEF;
 }
 
 .article-container h1 {
@@ -32,3 +32,19 @@
   padding-bottom: 1em;
 }
 
+
+@media (max-width: 400px){
+  .article-container {
+    width: 100%;
+  }
+}
+
+@media (min-width: 400px) and (max-width: 800px){
+  .article-container {
+    width: 80%;
+  }
+}
+
+@media (min-width: 800px){
+
+}
