--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -2,6 +2,6 @@ footer {
     margin-top: auto;
     padding: 1em 1em 1em 1em;
     text-align: center;
-    background-color: #000;
+    background-color: #5379a0;
     color: #EFEFEF;
 }
