--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -94,6 +94,6 @@ li {
 
 @media (min-width: 800px){
   :root { 
-    font-size: calc( 16px + (20 - 16) * ( (100vw - 400px) / ( 800 - 400) ));
+    font-size: 20px;
   }
 }
