--- a/src/components/blog-grid.module.css
+++ b/src/components/blog-grid.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   flex-direction: column;
   background-color: #EFEFEF;
-  color: #252525;
+  color: #393d47;
 }
 
 .blog-grid {
