Updated profile and subscription copy to reflect domain of mastery.

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,7 +1,8 @@
 header h2 {
-    font-size: 4rem;
+    font-size: 7rem;
     font-weight: 900;
     font-family: 'Poppins', sans-serif;
+    line-height: 100%;
 }
 
 header h3 {
